git ignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-#lib/
-#lib64/
+lib/
+lib64/
 parts/
 sdist/
 var/
@@ -108,7 +108,7 @@ celerybeat.pid
 .env
 .venv
 env/
-#venv/
+venv/
 ENV/
 env.bak/
 venv.bak/
