- same font size in all parts of all plots - added correlation computation - revised axis labels and titles - PDF instead of PNG to get vector graphics - use RQ-independent names for the plots

--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+myenv
 
 # Spyder project settings
 .spyderproject
@@ -137,3 +138,5 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+*~
+*.swp
