--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,10 @@
-APScheduler==3.8.1
-async-generator==1.10
-backports.zoneinfo==0.2.1
-cached-property==1.5.2
-certifi==2021.5.30
-cffi==1.14.6
-charset-normalizer==2.0.6
-click==8.0.3
-config==0.5.0.post0
-cssselect==1.1.0
-cycler==0.10.0
-dataclasses==0.8
-dataclasses-json==0.5.6
-idna==3.2
-importlib-metadata==4.8.1
-importlib-resources==5.4.0
-kiwisolver==1.3.1
-libcst==0.3.20
+libcst==0.3.18
 lxml==4.6.3
-marshmallow==3.13.0
-marshmallow-enum==1.5.1
 matplotlib==3.3.4
-mypy-extensions==0.4.3
-Naked==0.1.31
-numpy==1.19.5
-pandas==1.1.5
-Pillow==8.3.2
-pkg_resources==0.0.0
-psutil==5.8.0
-pycparser==2.20
-pycrypto==2.6.1
+numpy==1.23.0
+pandas==1.2.4
 pygit2==1.6.1
-pyparsing==2.4.7
-pyquery==1.4.3
-pyre-check==0.9.6
-pyre-extensions==0.0.22
-python-dateutil==2.8.2
-pytz==2021.1
-pytz-deprecation-shim==0.1.0.post0
-pywatchman==1.4.1
-PyYAML==5.4.1
-requests==2.26.0
 scipy==1.5.4
-shellescape==3.8.1
-six==1.16.0
-tabulate==0.8.9
-typing-extensions==3.10.0.2
-typing-inspect==0.7.1
-tzdata==2021.5
-tzlocal==4.1
-urllib3==1.26.7
-zipp==3.6.0
+pyquery==1.4.3
+requests==2.25.1
+typed_ast==1.5.2
